@@ -596,6 +596,9 @@ static int CalcEntry(struct MailTreelist_Data *data, Object *obj, struct mail_in
 	int col;
 	int changed = 0;
 
+	if (m && (m->flags & MAIL_FLAGS_NEW))
+		SetSoftStyle(&data->rp, FSF_BOLD, AskSoftStyle(&data->rp));
+
 	for (col=0;col<MAX_COLUMNS;col++)
 	{
 		int active;
@@ -760,6 +763,10 @@ static int CalcEntry(struct MailTreelist_Data *data, Object *obj, struct mail_in
 			}
 		}
 	}
+
+	if (m && (m->flags & MAIL_FLAGS_NEW))
+		SetSoftStyle(&data->rp, FS_NORMAL, AskSoftStyle(&data->rp));
+
 	return changed;
 }
 
@@ -896,7 +903,7 @@ static void DrawEntry(struct MailTreelist_Data *data, Object *obj, int entry_pos
 	prev_active = -1;
 
 	SetDrMd(rp,JAM1);
-	if (m->flags & MAIL_FLAGS_NEW)
+	if (m && (m->flags & MAIL_FLAGS_NEW))
 		SetSoftStyle(rp, FSF_BOLD, AskSoftStyle(rp));
 
 	for (col = 0;col < MAX_COLUMNS; col++)
@@ -1171,7 +1178,7 @@ static void DrawEntry(struct MailTreelist_Data *data, Object *obj, int entry_pos
 		prev_active = active;
 	}
 
-	if (m->flags & MAIL_FLAGS_NEW)
+	if (m && (m->flags & MAIL_FLAGS_NEW))
 		SetSoftStyle(rp, FS_NORMAL, AskSoftStyle(rp));
 }
 
